syntax = "proto3";

package chqpb;

option go_package = ".;chqpb";

message ResourceEntityProto {
  string name = 1;
  string type = 2;
  map<string, string> attributes = 3;
  map<string, string> edges = 4;
}

message ResourceEntityProtoList {
  repeated ResourceEntityProto entities = 1;
}