// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package graphpb;

option go_package = "github.com/cardinalhq/oteltools/pkg/graph/graphpb";

import "base.proto";
import "pod.proto";

// AppsStatefulSetSummary summarizes a Kubernetes apps/v1 StatefulSet.
message AppsStatefulSetSummary {
  BaseObject base_object = 1;
  AppsStatefulSetSpec spec = 2;
  AppStatefulSetStatus status = 3;
}

// AppsStatefulSetSummarySpec is the spec of a AppsStatefulSetSummary.
message AppsStatefulSetSpec {
  int32 replicas = 1;

  // "template" is the pod template of the StatefulSet.
  AppsStatefulSetTemplate template = 2;

  // "service_name" is the name of the service that governs the StatefulSet.
  string service_name = 3;
}

// AppsStatefulSetSummaryStatus is the status of a AppsStatefulSetSummary.
message AppsStatefulSetTemplate {
  BaseObject metadata = 1;
  PodSpec pod_spec = 2;
}

// AppStatefulSetStatus is the status of a Kubernetes apps/v1 StatefulSet.
message AppStatefulSetStatus {
	// replicas is the number of Pods created by the StatefulSet controller.
  int32 replicas = 1;

	// readyReplicas is the number of pods created for this StatefulSet with a Ready Condition.
  int32 ready_replicas = 2;

	// currentReplicas is the number of Pods created by the StatefulSet controller from the StatefulSet version
	// indicated by currentRevision.
  int32 current_replicas = 3;

	// updatedReplicas is the number of Pods created by the StatefulSet controller from the StatefulSet version
	// indicated by updateRevision.
  int32 updated_replicas = 4;

	// currentRevision, if not empty, indicates the version of the StatefulSet used to generate Pods in the
	// sequence [0,currentReplicas).
  string current_revision = 5;

	// updateRevision, if not empty, indicates the version of the StatefulSet used to generate Pods in the sequence
	// [replicas-updatedReplicas,replicas)
  string update_revision = 6;
}
